# jee_councellor_chatbot

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: config.py  exceptions.py  main.py
app/api/: dependencies.py
app/api/routes/: branches.py  compare.py  counselor.py  cutoffs.py  health.py  institutes.py  recommend.py
app/engine/: compatibility.py  explainer.py  interest_matcher.py  persona.py  rag.py  reason_codes.py  risk_classifier.py  scorer.py
app/etl/: category_expander.py  cleaner.py  loader.py  schema.py
app/models/: request.py  response.py
app/services/: knowledge_loader.py
app/utils/: cache.py  logger.py
data/knowledge/: branch_comparison.json  branch_profiles.json  career_paths.json  faq.json  higher_studies.json  institute_tiers.json  placements.json  recruiters.json  scoring_config.json  startup_ecosystem.json
docker/: Dockerfile  docker-compose.yml
frontend/: index.html
tests/: test_api.py  test_engine.py  test_etl.py
